agentgateway-mcp-2026-kind/yaml/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mcp-gw
  namespace: mcp-2026
spec:
  gatewayClassName: agentgateway
  infrastructure:
    parametersRef:
      group: agentgateway.dev
      kind: AgentgatewayParameters
      name: mcp-gw-params
  listeners:
  - name: mcp
    protocol: HTTP
    port: 3000
    allowedRoutes:
      namespaces:
        from: Same
