agentgateway-mcp-2026-kind/yaml/backend-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp
  namespace: mcp-2026
spec:
  parentRefs:
  - name: mcp-gw
  rules:
  - backendRefs:
    - group: agentgateway.dev
      kind: AgentgatewayBackend
      name: ops-mcp
